double header and dropdown list with photo

--- a/src/app.html
+++ b/src/app.html
@@ -10,3 +10,26 @@
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+    body {
+		font-family: 'Helvetica', sans-serif;
+		color: white;
+        background-color: black;
+    }
+
+	p {
+		margin: 2px;
+	}
+
+	a:link, a:visited {
+    	color: white;
+    	text-decoration: none;
+	}
+
+	a:hover, a:active {
+    	color: red;
+		text-decoration: line-through;
+		cursor: grab;
+	}
+</style>
